# linux-ld

./: 11.md  CMAKE_自动子目录编译方案.md  CMakeLists.txt  CMakeLists.txt.backup  Kconfig-CMake集成方案.md  README.md  USAGE.md  auto_init.ld  build.py
components/module1/: CMakeLists.txt  module1.c
components/module2/: CMakeLists.txt  module2.c
components/test_module/: CMakeLists.txt  test_module.c
components/utils/: CMakeLists.txt  math_utils.c  string_utils.c
example/: demo_modules.c  main.c
include/: auto_init.h
src/: auto_init.c
